# synthboss

./: .gitignore  Makefile.am  config.h  configure.ac  mks7.json  schema.json  synthboss-synth-schema.json
data/: synthboss-synth-schema.json
data/devices/: mks7.json
devices/: mks7.json
src/: .gitignore  .parameter.cpp.swp  Makefile  Makefile.am  Makefile.in  main.cpp  observer.hpp  parameter.cpp  parameter.hpp  sbgui.cpp  sbgui.hpp  sbgui.moc.cpp  sbmidi.cpp  sbmidi.hpp  synth.cpp  synth.hpp  synthboss
src/.deps/: main.Po
